# fast-crossing

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: format.yml  pip.yml  wheels.yml
benchmarks/: benchmark_point_in_polygon.py
docs/: index.md  point-in-polygon.md  polyline-in-polygon.md
docs/about/: license.md  release-notes.md
fast_crossing/: KDTree.py  spatial.py
scripts/: debug_polyline_in_polygon.py  debug_svd.py  spline_draw.py
src/: densify_polyline.hpp  fast_crossing.hpp  flatbush.h  kd_quiver.hpp  main.cpp  nano_kdtree.hpp  nanoflann_kdtree.hpp  point_in_polygon.hpp  polyline_in_polygon.hpp  pybind11_fast_crossing.hpp  pybind11_flatbush.hpp  pybind11_nano_kdtree.hpp  pybind11_nanoflann_kdtree.hpp  pybind11_quiver.hpp  quiver.hpp
src/fast_crossing/: __init__.py  spatial.py
src/fast_crossing/_core/: __init__.pyi  tf.pyi
tests/: test_basic.py
